# diffusion_policy

./: .gitignore  CMakeLists.txt  README.md  env_setup.bash  package.xml  setup.py
diffusion_policy/config/: train_exo_diffusion_unet_lowdim_workspace.yaml
diffusion_policy/config/task/: exo_dyad_lowdim.yaml
diffusion_policy/config/task/data_conversion/: conversion_test.yaml
diffusion_policy/dataset/: exo_dyad_dataset.py  exo_dyad_lowdim_dataset.py
diffusion_policy/env_runner/: exo_dyad_lowdim_runner.py
diffusion_policy/scripts/: csv_data_conversion.py  inference_test.py
diffusion_policy/workspace/: train_diffusion_unet_lowdim_workspace.py
msg/: X2RobotState.msg
nodes/: action_predictor.py  csv_data_publisher.py
perspectives/: ExoJointStates.perspective  RealExoJointStates.perspective
