<?xml version="1.0"?>
<package format="2">
  <name>diffusion_policy</name>
  <version>0.0.1</version>
  <description>Diffusion based action trajectory generation for the X2 exoskeleton</description>

  <maintainer email="241abhishek@gmail.com">Abhishek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

</package>